@@ -1,0 +1,2 @@
+-- Add city_type_id column
+ALTER TABLE city ADD COLUMN city_type_id TINYINT UNSIGNED NULL;
