@@ -1,0 +1,2 @@
+-- Create city type records
+INSERT INTO city_type (name) VALUES ('Census Designated Place'), ('Incorporated Place');
